--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "animate.css": "^4.1.1",
-    "jquery": "^3.6.4"
+    "jquery": "^3.6.4",
+    "mermaid": "^10.1.0"
   }
 }
